--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,17 @@
-// Начните писать стили здесь
+//Global
+
+@import "global/variables.less";
+@import "global/fonts.less";
+@import "global/global.less";
+
+//Blocks
+
+@import "blocks/page.less";
+@import "blocks/page__body.less";
+@import "blocks/page-header.less";
+@import "blocks/presentation.less";
+@import "blocks/features.less";
+@import "blocks/example.less";
+@import "blocks/page-footer.less";
+@import "blocks/contacts.less";
+@import "blocks/copyright.less";
