--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,7 +1,12 @@
+.contacts {
+  background-color: @basic-grey;
+}
+
 .contacts__heading {
   font-size: 16px;
   font-weight: 400;
   text-transform: uppercase;
+  color: @special-black;
 }
 
 .contacts__text {
