--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -5,5 +5,6 @@
 @basic-grey: #F2F2F2;
 @basic-black: #000000;
 @special-dark-grey: #444444;
+@special-dark-grey2: #222222;
 @special-black: #111111;
 @special-grey: #EAEAEA;
