--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,9 +9,11 @@
 @import "blocks/page.less";
 @import "blocks/page__body.less";
 @import "blocks/page-header.less";
+@import "blocks/page-main.less";
 @import "blocks/presentation.less";
 @import "blocks/features.less";
 @import "blocks/example.less";
+@import "blocks/form.less";
 @import "blocks/page-footer.less";
 @import "blocks/contacts.less";
 @import "blocks/copyright.less";
