Стилизация страницы каталога

--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -1,5 +1,5 @@
 .presentation {
-  background: url(../../img/presentation-background.png) no-repeat;
+  background: url("../../img/presentation-background.png") no-repeat;
 }
 
 .presentation__heading {
