--- a/source/less/blocks/page__body.less
+++ b/source/less/blocks/page__body.less
@@ -1,5 +1,5 @@
 .page__body {
-  font-family: "Oswald", Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
