--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,6 +14,9 @@
 @import "blocks/features.less";
 @import "blocks/example.less";
 @import "blocks/form.less";
+@import "blocks/catalog.less";
+@import "blocks/extra.less";
+@import "blocks/gift.less";
 @import "blocks/page-footer.less";
 @import "blocks/contacts.less";
 @import "blocks/copyright.less";
