--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,8 +1,14 @@
 .contacts {
   background-color: @basic-grey;
+
+  @media (min-width: @desktop-width) {
+    width: 570px;
+  }
 }
 
 .contacts__heading {
+  display: inline-block;
+  width: 140px;
   font-size: 16px;
   font-weight: 400;
   text-transform: uppercase;
@@ -10,5 +16,7 @@
 }
 
 .contacts__text {
+  display: inline-block;
+  width: 140px;
   line-height: 20px;
 }
