--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,3 +1,42 @@
+.main-navigation {
+  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+.main-navigation__wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.main-navigation__logo {
+  height: 66px;
+
+  @media (min-width: @tablet-width) {
+    height: 90px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 120px;
+  }
+}
+
+.main-navigation__toggle {
+  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.main-navigation__list {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+    flex-direction: row;
+  }
+}
+
 .main-navigation__item {
   font-size: 20px;
   line-height: 20px;
