--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -1,4 +1,6 @@
 .presentation {
+  display: flex;
+  flex-direction: column;
   background: url("../../img/presentation-background.png") no-repeat;
 }
 
@@ -7,10 +9,38 @@
   font-weight: 400;
   line-height: 36px;
   color: @basic-white;
+  order: 1;
 }
 
 .presentation__slogan {
   color: @basic-white;
+  order: 2;
+}
+
+.presentation__image {
+  order: 3;
+
+  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+    order: 4;
+  }
+}
+
+.presentation__button {
+  order: 4;
+
+  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+    order: 3;
+  }
+}
+
+.presentation__list {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  order: 5;
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .presentation__item {
