--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,4 +1,4 @@
-//Colors
+// Colors
 
 @basic-white: #FFFFFF;
 @basic-green: #68B738;
@@ -8,3 +8,9 @@
 @special-dark-grey2: #222222;
 @special-black: #111111;
 @special-grey: #EAEAEA;
+
+// Viewports
+
+@mobile-width: 320px;
+@tablet-width: 768px;
+@desktop-width: 1440px;
