--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,4 +19,5 @@
 @import "blocks/gift.less";
 @import "blocks/page-footer.less";
 @import "blocks/contacts.less";
+@import "blocks/social.less";
 @import "blocks/copyright.less";
