--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -7,11 +7,7 @@
 }
 
 .page-main__text {
+  width: 230px;
   text-transform: uppercase;
-  color: @basic-black;
-}
-
-.page-main__required {
-  line-height: 16px;
   color: @basic-black;
 }
