--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -20,7 +20,7 @@
 .presentation__image {
   order: 3;
 
-  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     order: 4;
   }
 }
@@ -28,7 +28,7 @@
 .presentation__button {
   order: 4;
 
-  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     order: 3;
   }
 }
