--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
 
-  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     flex-direction: row;
     flex-wrap: wrap;
   }
