--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,5 +1,5 @@
 .main-navigation {
-  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: row;
   }
@@ -23,7 +23,7 @@
 }
 
 .main-navigation__toggle {
-  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     display: none;
   }
 }
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
 
-  @media (min-width: @tablet-width), (min-width: @desktop-width) {
+  @media (min-width: @tablet-width) {
     flex-direction: row;
   }
 }
