--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,3 +1,17 @@
+.social {
+  margin-top: 32px;
+  padding-top: 20px;
+  padding-bottom: 21px;
+  border-top: 1px solid @special-line-grey;
+  border-bottom: 1px solid @special-line-grey;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
+    padding: 0;
+    border: none;
+  }
+}
+
 .social__list {
   display: flex;
   flex-direction: row;
