--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,9 +1,11 @@
 .button {
+  font-family: inherit;
   line-height: 18px;
   text-transform: uppercase;
   color: @basic-white;
   background-color: @basic-green;
   border: none;
+  padding: 0;
 }
 
 .visually-hidden {
@@ -23,4 +25,24 @@
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+.container {
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 110px;
+  }
+}
+
+.image {
+  object-fit: cover;
+}
+
+.text-content {
+  font-family: "Arial", sans-serif;
 }
