--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,33 +1,95 @@
 .example {
+  padding: 27px 0 39px 0;
   background-color: @special-grey;
 
   @media (min-width: @tablet-width) {
+    padding: 43px 0  0;
+    border-top: 1px solid @line-grey;
     background-color: @basic-white;
   }
 
   @media (min-width: @desktop-width) {
+    padding-top: 0;
     display: flex;
     flex-direction: row;
+    border: none;
+    background: linear-gradient(to top, @special-grey 70%, @basic-white 30%);
   }
 }
 
 .example__wrapper {
   @media (min-width: @desktop-width) {
-    width: 450px;
+    width: 570px;
+    padding-right: 0;
+    padding-bottom: 75px;
+    margin-right: 80px;
   }
 }
 
 .example__heading {
+  margin: 0;
   font-size: 36px;
   line-height: 40px;
   font-weight: 400;
   color: @basic-black;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 82px;
+  }
+}
+
+.example__text {
+  margin: 33px 0 0;
+
+  @media (min-width: @tablet-width) {
+    margin: 63px 0 0;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 146px;
+    width: 436px;
+  }
+}
+
+.example__list {
+  @media (min-width: @tablet-width) {
+    display: inline-block;
+    margin-top: 25px;
+    width: 380px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 69px;
+  }
 }
 
 .example__item {
   display: inline-block;
-  width: 125px;
-  height: 70px;
+  position: relative;
+  text-align: center;
+  padding: 15px 0 17px;
+  width: 124px;
+  border: 1px solid @special-border-grey;
+  border-radius: 5px;
+
+  &:first-child {
+    margin-right: 20px;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 162px;
+
+    &:first-child {
+      margin-right: 42px;
+    }
+  }
 }
 
 .example__quantity {
@@ -35,32 +97,163 @@
   line-height: 24px;
   text-transform: uppercase;
   color: @basic-black;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+  }
 }
 
 .example__result {
+  position: absolute;
+  bottom: -10px;
+  right: 20px;
+  width: 86px;
   font-size: 12px;
   line-height: 12px;
-  text-transform: uppercase;
+  text-transform: lowercase;
+  text-align: center;
+  background-color: @special-grey;
+
+  @media (min-width: @tablet-width) {
+    font-size: 14px;
+    line-height: 14px;
+    width: 130px;
+    background-color: @basic-white;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: @special-grey;
+  }
+}
+
+.mobile-break {
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 
 .example__cost {
-  display: inline-block;
+  margin: 26px 0 0;
   line-height: 20px;
   text-transform: uppercase;
+  text-align: center;
   color: @basic-black;
+
+  @media (min-width: @tablet-width) {
+    display: inline-block;
+    margin-left: 140px;
+    font-size: 20px;
+    width: 175px;
+    text-align: end;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-width: 324px;
+    margin: 55px 0 0 0;
+    text-align: start;
+  }
 }
 
 .example__slider {
+  margin-top: 42px;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   color: @basic-black;
 
   @media (min-width: @tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    margin-top: 247px;
+    padding-bottom: 67px;
     background-color: @special-grey;
   }
 
   @media (min-width: @desktop-width) {
-    width: 625px;
+    margin: 0;
+    width: 570px;
+    background-color: transparent;
   }
+}
+
+.slider__image {
+  margin-bottom: 33px;
+
+  @media (min-width: @desktop-width) {
+    width: 570px;
+    height: 566px;
+    margin-bottom: 13px;
+  }
+}
+
+.slider__before {
+  margin-left: 63px;
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+  }
+}
+
+.slider__before,
+.slider__after {
+  @media (min-width: @tablet-width) {
+    border-bottom: 1px dotted @basic-black;
+  }
+}
+
+.slider__line {
+  display: inline-block;
+  width: 84px;
+  height: 14px;
+  margin: 0 17px;
+  background-color: @basic-white;
+  border: 1px solid @special-border-grey;
+  box-sizing: border-box;
+  border-radius: 6px;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.slider-range {
+  margin: 3px 0 0 6px;
+  width: 35px;
+  height: 6px;
+  background-color: @basic-green;
+  border-radius: 6px;
+}
+
+.slider__scale {
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
+
+  @media (min-width: @tablet-width) {
+    display: inline-block;
+    position: relative;
+    width: 428px;
+    height: 6px;
+    background-color: @special-border-grey;
+    border-radius: 6px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 11px 0 20px;
+  }
+}
+
+.slider-toggle {
+  position: absolute;
+  top: -10px;
+  left: 50%;
+  width: 5px;
+  height: 5px;
+  padding: 0;
+  border: 9px solid @basic-white;
+  outline: 1px solid @special-border-grey;
+  background-color: @basic-green;
+  border-radius: 50%;
+  box-shadow: 0 2px @special-border-grey;
 }
