--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,8 +1,28 @@
+.features {
+  padding-top: 27px;
+  padding-bottom: 42px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 45px;
+    padding-bottom: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 71px;
+  }
+}
+
 .features__heading {
+  margin: 0 0 38px;
   font-size: 36px;
   line-height: 40px;
   font-weight: 400;
   color: @basic-black;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
 
 .features__list {
@@ -10,7 +30,33 @@
   flex-direction: column;
 
   @media (min-width: @tablet-width) {
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 324px 324px;
+    grid-template-rows: 1fr;
+    gap: 29px 58px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: 245px 245px 245px 245px;
+    gap: 0 79px;
+  }
+}
+
+.features__item {
+  padding: 0 0 20px;
+
+  &:last-child {
+    padding: 0;
+  }
+}
+
+.features__text {
+  width: 160px;
+  margin: 0;
+
+  @media (min-width: @tablet-width) {
+    width: 245px;
+    font-size: 16px;
+    line-height: 24px;
   }
 }
