--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,8 +1,35 @@
+.page-footer {
+  @media (min-width: @desktop-width) {
+    position: relative;
+  }
+}
+
 .page-footer__wrapper {
+  padding-top: 39px;
+  padding-bottom: 22px;
   background-color: @basic-grey;
 
   @media (min-width: @tablet-width) {
+    padding-top: 60px;
+    padding-bottom: 61px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 57px;
+    padding-bottom: 58px;
+  }
+}
+
+.page-footer__logo {
+  width: 128px;
+  display: block;
+  margin: auto;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
   }
 }
