--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,4 +1,9 @@
 .page {
   height: 100%;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  color: @special-dark-grey;
   background-color: @basic-white;
 }
