--- a/source/less/blocks/page__body.less
+++ b/source/less/blocks/page__body.less
@@ -1,8 +1,4 @@
 .page__body {
-  font-family: "Oswald", "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 18px;
-  font-weight: 400;
-  color: @special-dark-grey;
-  margin: 0;
+  min-height: 100%;
+  margin: 0 auto;
 }
