--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -122,6 +122,10 @@
   grid-template-rows: 1fr 1fr;
   order: 5;
 
+  @media (max-width: @mobile-width-only) {
+    padding: 0;
+  }
+
   @media (min-width: @tablet-width) {
     gap: 30px 0;
   }
