--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -1,7 +1,7 @@
 .presentation {
   display: flex;
   flex-direction: column;
-  background: url("../../img/presentation-background.png") no-repeat;
+  background: url("source/img/presentation-background.png") no-repeat;
   background-size: contain;
 
   @media (min-width: @tablet-width) {
