--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -33,7 +33,7 @@
   font-weight: 400;
   line-height: 16px;
   text-transform: uppercase;
-  color: @special-dark-grey2;
+  color: @special-dark-greytwo;
 }
 
 .extra-item-quantity {
