--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -1,7 +1,7 @@
 .presentation {
   display: flex;
   flex-direction: column;
-  background: url("source/img/presentation-background.png") no-repeat;
+  background: url("../../img/presentation-background.png") no-repeat;
   background-size: contain;
 
   @media (min-width: @tablet-width) {
@@ -93,7 +93,7 @@
   order: 4;
 
   &:hover {
-    background-color: @basic-green2;
+    background-color: @basic-green-two;
   }
 
   &:active {
