--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -30,7 +30,7 @@
   font-weight: 400;
   line-height: 20px;
   text-transform: uppercase;
-  color: @special-dark-grey2;
+  color: @special-dark-greytwo;
 }
 
 .catalog-item-table {
