--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -14,7 +14,7 @@
     padding-left: 110px;
     padding-right: 110px;
     min-height: 120px;
-    background-image: url("source/img/presentation-background.png");
+    background-image: url("../../img/presentation-background.png");
     background-repeat: no-repeat;
     background-position: right top;
     background-size: 696px;
