--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -2,11 +2,11 @@
 
 @basic-white: #FFFFFF;
 @basic-green: #68B738;
-@basic-green2: #5EAA2F;
+@basic-green-two: #5EAA2F;
 @basic-grey: #F2F2F2;
 @basic-black: #000000;
 @special-dark-grey: #444444;
-@special-dark-grey2: #222222;
+@special-dark-greytwo: #222222;
 @special-black: #111111;
 @special-grey: #EAEAEA;
 @line-grey: #E6E6E6;
