--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -58,7 +58,7 @@
 }
 
 .extra__gift {
-  background: url("../../img/gift-background.png") no-repeat;
+  background: url("../img/gift-background.png") no-repeat;
 }
 
 .gift-text {
