--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,6 +1,5 @@
 .button {
-  font-family: inherit;
-  line-height: 18px;
+  font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   color: @basic-white;
   background-color: @basic-green;
