--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -12,10 +12,16 @@
 @line-grey: #E6E6E6;
 @special-line-grey: #D9D9D9;
 @special-border-grey: #CDCDCD;
+@stroke: #E7E7E7;
 @hover-black: rgba(0, 0, 0, 0.6);
 @active-black: rgba(0, 0, 0, 0.3);
 @hover-white: rgba(255, 255, 255, 0.6);
 @active-white: rgba(255, 255, 255, 0.3);
+@active-green: rgba(104, 183, 56, 0.3);
+@active-dark-grey: rgba(68, 68, 68, 0.3);
+@radio-hover: #BABABA;
+@radio-disabled: rgba(186, 186, 186, 0.3);
+@radio-disabledtwo: rgba(34, 34, 34, 0.3);
 
 // Viewports
 
