--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-between;
   padding-top: 28px;
   padding-bottom: 22px;
   background-color: @basic-grey;
