--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,13 +1,35 @@
-
-.page-title {
+.page-main__title {
+  margin: 27px 0 0 20px;
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
   color: @basic-black;
+
+  @media (min-width: @tablet-width) {
+    margin: 38px 0 0 70px;
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 67px 0 0 110px;
+  }
 }
 
 .page-main__text {
+  margin: 37px 0 39px 20px;
   width: 230px;
   text-transform: uppercase;
   color: @basic-black;
+
+  @media (min-width: @tablet-width) {
+    margin: 54px 0 66px 70px;
+    width: 323px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 56px 0 66px 110px;
+  }
 }
