--- a/source/less/blocks/page__body.less
+++ b/source/less/blocks/page__body.less
@@ -1,4 +1,19 @@
 .page__body {
   min-height: 100%;
+  min-width: 320px;
+  max-width: 1440px;
   margin: 0 auto;
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../img/presentation-background.png");
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-size: 696px;
+  }
+}
+
+.desktop-no-index {
+  @media (min-width: @desktop-width) {
+    background: none;
+  }
 }
